2005-10-23  Chong Yidong  <cyd@stupidchicken.com>

	* gnus-sum.el (gnus-ignored-from-addresses): Handle case where
	user-mail-name is an empty string.

2005-10-25  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-score.el (gnus-default-adaptive-score-alist): Set defaults
	depending on gnus-score-decay-constant.

	* encrypt.el (encrypt-insert-file-contents)
	(encrypt-write-file-contents): Don't use `gnus-message'.

	* mm-uu.el (mm-uu-verbatim-marks-extract): Add four start and end
	arguments.
	(mm-uu-type-alist): Add message-marks and insert-marks.  Pass
	arguments to mm-uu-verbatim-marks-extract.
	(mm-uu-hide-markers): New variable.
	(mm-uu-extract): Use face similar to `gnus-cite-3'.

	* gnus-fun.el (gnus-convert-image-to-x-face-command)
	(gnus-convert-image-to-face-command): Use "convert" by default to
	allow other input image formats.
	(gnus-x-face-from-file, gnus-face-from-file): Adjust doc strings
	accordingly.

2005-10-23  Simon Josefsson  <jas@extundo.com>

	* imap.el (imap-gssapi-program): Align command line parameters
	with latest GNU SASL.
	(imap-gssapi-open): Ignore 'Trying ...' messages from GNU SASL.

2005-10-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnslashdot.el (nnslashdot-retrieve-headers-1): Update to new
	HTML.
	(nnslashdot-request-article): Ditto.

	* lpath.el (featurep): Add nobreak-char-display.

2005-10-20  Hiroshi Fujishima  <hiroshi.fujishima@gmail.com>  (tiny change)

	* mail-source.el (mail-source-fetch-pop): Require pop3.
	(mail-source-check-pop): Ditto.

2005-10-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2047.el (rfc2047-decode-encoded-words): Fix the handling of
	errors.

2005-10-19  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-treat-strip-trailing-blank-lines)
	(gnus-treat-strip-leading-blank-lines): Improve doc string.

	* message.el (message-tool-bar-local-item-from-menu): Fix comment.

	* mm-bodies.el (mm-decode-string): Call
	`mm-charset-to-coding-system' with allow-override argument.
