@@ -1,3 +1,9 @@
+2005-10-26  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* message.el (message-display-completion-list): New function.
+	(message-expand-group): Use it; make sure the Completions buffer
+	is modifiable.
+
 2005-10-23  Chong Yidong  <cyd@stupidchicken.com>
 
 	* gnus-sum.el (gnus-ignored-from-addresses): Handle case where
